// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CockpitHeader snapshots > renders ended state — no primary CTA, shows Completed badge 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <div
        data-testid="cockpit-queue-inline"
      >
        <h1
          class="min-w-0 max-w-full"
        >
          <button
            aria-controls="radix-:rs:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Patient details for Ravi Sharma"
            class="min-w-0 max-w-full rounded-sm text-left focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-state="closed"
            data-testid="cockpit-identity-title"
            type="button"
          >
            <span
              class="inline-flex min-w-0 max-w-full items-baseline gap-2 rounded-md bg-primary/5 px-2.5 py-1"
            >
              <span
                class="truncate text-lg font-semibold leading-none text-foreground"
              >
                Ravi Sharma
              </span>
              <span
                class="shrink-0 text-sm font-medium text-muted-foreground"
              >
                33 y / F
              </span>
            </span>
          </button>
        </h1>
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shrink-0 border-transparent bg-info/15 text-info"
        >
          Completed
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:rt:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders live state 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <div
        data-testid="cockpit-queue-inline"
      >
        <h1
          class="min-w-0 max-w-full"
        >
          <button
            aria-controls="radix-:rg:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Patient details for Ravi Sharma"
            class="min-w-0 max-w-full rounded-sm text-left focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-state="closed"
            data-testid="cockpit-identity-title"
            type="button"
          >
            <span
              class="inline-flex min-w-0 max-w-full items-baseline gap-2 rounded-md bg-primary/5 px-2.5 py-1"
            >
              <span
                class="truncate text-lg font-semibold leading-none text-foreground"
              >
                Ravi Sharma
              </span>
              <span
                class="shrink-0 text-sm font-medium text-muted-foreground"
              >
                28 y / F
              </span>
            </span>
          </button>
        </h1>
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:rh:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders ready state with OPD queue token 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <div
        data-testid="cockpit-queue-inline"
      >
        <h1
          class="min-w-0 max-w-full"
        >
          <button
            aria-controls="radix-:r1c:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Patient details for Ravi Sharma"
            class="min-w-0 max-w-full rounded-sm text-left focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-state="closed"
            data-testid="cockpit-identity-title"
            type="button"
          >
            <span
              class="inline-flex min-w-0 max-w-full items-baseline gap-2 rounded-md bg-primary/5 px-2.5 py-1"
            >
              <span
                class="shrink-0 text-lg font-semibold tabular-nums leading-none text-foreground"
                data-testid="cockpit-identity-token"
              >
                #4
              </span>
              <span
                class="truncate text-lg font-semibold leading-none text-foreground"
              >
                Ravi Sharma
              </span>
              <span
                class="shrink-0 text-sm font-medium text-muted-foreground"
              >
                38 y / F
              </span>
            </span>
          </button>
        </h1>
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <div
          class="inline-flex rounded-md shadow-sm"
          role="group"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md px-3 text-xs rounded-r-none gap-1.5"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-video h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
              />
              <rect
                height="12"
                rx="2"
                width="14"
                x="2"
                y="6"
              />
            </svg>
            Start consult
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Choose option"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md text-xs rounded-l-none border-l border-primary-foreground/20 px-2"
            data-state="closed"
            id="radix-:r1d:"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:r1f:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders ready state with full demographics 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <div
        data-testid="cockpit-queue-inline"
      >
        <h1
          class="min-w-0 max-w-full"
        >
          <button
            aria-controls="radix-:r0:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Patient details for Ravi Sharma"
            class="min-w-0 max-w-full rounded-sm text-left focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-state="closed"
            data-testid="cockpit-identity-title"
            type="button"
          >
            <span
              class="inline-flex min-w-0 max-w-full items-baseline gap-2 rounded-md bg-primary/5 px-2.5 py-1"
            >
              <span
                class="truncate text-lg font-semibold leading-none text-foreground"
              >
                Ravi Sharma
              </span>
              <span
                class="shrink-0 text-sm font-medium text-muted-foreground"
              >
                42 y / M
              </span>
            </span>
          </button>
        </h1>
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <div
          class="inline-flex rounded-md shadow-sm"
          role="group"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md px-3 text-xs rounded-r-none gap-1.5"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-video h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
              />
              <rect
                height="12"
                rx="2"
                width="14"
                x="2"
                y="6"
              />
            </svg>
            Start consult
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Choose option"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md text-xs rounded-l-none border-l border-primary-foreground/20 px-2"
            data-state="closed"
            id="radix-:r1:"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:r3:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders ready state without demographics (null fallback) 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex w-full items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <div
        data-testid="cockpit-queue-inline"
      >
        <h1
          class="min-w-0 max-w-full"
        >
          <button
            aria-controls="radix-:r8:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Patient details for Ravi Sharma"
            class="min-w-0 max-w-full rounded-sm text-left focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
            data-state="closed"
            data-testid="cockpit-identity-title"
            type="button"
          >
            <span
              class="inline-flex min-w-0 max-w-full items-baseline gap-2 rounded-md bg-primary/5 px-2.5 py-1"
            >
              <span
                class="truncate text-lg font-semibold leading-none text-foreground"
              >
                Ravi Sharma
              </span>
            </span>
          </button>
        </h1>
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <div
          class="inline-flex rounded-md shadow-sm"
          role="group"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md px-3 text-xs rounded-r-none gap-1.5"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-video h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
              />
              <rect
                height="12"
                rx="2"
                width="14"
                x="2"
                y="6"
              />
            </svg>
            Start consult
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Choose option"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md text-xs rounded-l-none border-l border-primary-foreground/20 px-2"
            data-state="closed"
            id="radix-:r9:"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:rb:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders terminal state with cancelled status 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex min-w-0 items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <span
        class="truncate text-sm font-semibold text-muted-foreground"
      >
        Ravi Sharma
      </span>
      <div
        class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shrink-0 border-transparent bg-muted text-muted-foreground"
      >
        Cancelled
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md px-3 text-xs gap-1.5"
          type="button"
        >
          Reschedule
        </button>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:r17:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`CockpitHeader snapshots > renders terminal state — single subdued row, no demographics, no row 2 1`] = `
<div>
  <header
    class="top-0 lg:static z-30 px-4 py-1.5 lg:px-6 relative min-h-10 flex flex-col justify-center"
  >
    <div
      class="flex min-w-0 items-center gap-2"
    >
      <a
        aria-label="Back to OPD"
        class="shrink-0 text-sm font-medium text-primary leading-none hover:text-primary/80 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 rounded"
        href="/dashboard/opd-today"
      >
        ←
      </a>
      <span
        class="truncate text-sm font-semibold text-muted-foreground"
      >
        Ravi Sharma
      </span>
      <div
        class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 shrink-0 border-transparent bg-destructive/15 text-destructive"
      >
        No-show
      </div>
      <div
        class="ml-auto flex shrink-0 items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-8 rounded-md px-3 text-xs gap-1.5"
          type="button"
        >
          Reschedule
        </button>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="More options"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-8 w-8 p-0"
          data-state="closed"
          id="radix-:r12:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </header>
</div>
`;
